# bixi_availability_prediction

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
notebooks/: 01_data_scraper.ipynb  02-weather-data-scraper.ipynb  02_EDA.ipynb  03_modeling.ipynb  raw_data_scraper.ipynb
notebooks/.ipynb_checkpoints/: 01_data_scraper-checkpoint.ipynb  02-weather-data-scraper-checkpoint.ipynb  02_EDA-checkpoint.ipynb  raw_data_scraper-checkpoint.ipynb
scripts/: upload_data.py
src/: constants.py  utils.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/bixi_availability_prediction/: etl.py  utils.py
src/bixi_availability_prediction/config/: __init__.py  constants.py
src/bixi_availability_prediction/data/: etl.py  ingest_station_status.py
src/bixi_availability_prediction/models/: baseline.py
src/bixi_ride_predictions/: constants.py  etl.py
tests/unit/: ingest_station_status_test.py  utils_test.py
