[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bixi-availability-prediction"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=bixi_availability_prediction --cov-report=term-missing"
